Remove unused files. Add css path.

--- a/source/templates/index.ejs
+++ b/source/templates/index.ejs
@@ -1,6 +1,8 @@
 <% include common/_head_start.ejs %>
 
 <script type="text/javascript" src="<%= asset_path %>/javascripts/main.js"></script>
+<link rel="stylesheet" href="<%= asset_path %>css/lib/normalize.css" type="text/css">
+<link rel="stylesheet" href="<%= asset_path %>css/index.css" type="text/css">
 
 <% include common/_head_end.ejs %>
 <% include common/_header.ejs %>
